# learning-flask

./: LICENSE  README.md  actions-ci.yml  flask-app.sh  manage.py  pylintrc  pyproject.toml
.github/workflows/: ci.yml
templates/: landing.html
tests/: __init__.py  conftest.py  test_web_site_kripta.py
web_site_kripta/: __init__.py  web_site_kripta.py
