[tool.poetry]
name = "web-site-krypta"
version = "0.1.0"
description = ""
authors = ["MarianoTupa <tupa.sales@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
black = "^21.9b0"
Flask = "^2.0.2"
pytest-flask = "^1.2.0"
isort = "^5.9.3"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
